# Reina

./: Cargo.toml  README.md
benches/: serialization_bench.rs
docs/: architecture.md  pocup_spec.md  roc_spec.md  rsl_spec.md
src/: lib.rs  main.rs
src/consensus/: block_producer.rs  mod.rs
src/networking/: network.rs
src/node/: chain_manager.rs  mempool.rs  mod.rs
src/pocup/: mod.rs  pocup.rs
src/roc/: arbiter.rs  forge.rs  mod.rs  sentinel.rs
src/rsl/: mod.rs
src/utils/: serialization.rs
