[package]
name = "reina"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.86"
bytes = "1.9.0"
ed25519-dalek = "2.1.1"
env_logger = "0.11.6"
log = "0.4.25"
prost = "0.13.4"
rand = "0.9.0"
rmp-serde = "1.3.0"
rocksdb = "0.23.0"
tokio = { version = "1.43.0", features = ["full"] }
xxhash-rust = "0.8.15"
byteorder = "1.4"
blake3 = "1.3"
rayon = "1.7"
num_cpus = "1.13"
core_affinity = { version = "0.5.10", optional = true }

[dev-dependencies]
criterion = "0.4"

[features]
cpu_affinity = ["dep:core_affinity"]

[[bench]]
name = "serialization_bench"
harness = false